--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ROM VIBE</title>
+    <title>ROM VIBE RUN</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="start-screen">
-      <h1>ROM VIBE</h1>
+      <h1>ROM VIBE RUN</h1>
       <p>Clique para começar</p>
     </div>
     <canvas id="gameCanvas"></canvas>
